--- a/SleepTracker/build.gradle
+++ b/SleepTracker/build.gradle
@@ -12,10 +12,18 @@ repositories {
 	mavenCentral()
 }
 
+apply plugin: 'war'
+war {
+  enabled = true
+  archiveName = "${baseName}.war"    
+  destinationDir = file("./")      
+}
+
 dependencies {
 	compile project(':JPASleepTracker')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation ('org.springframework.boot:spring-boot-starter-tomcat')
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
