--- a/ngSleepTracker/angular.json
+++ b/ngSleepTracker/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ngEventTracker": {
+    "ngSleepTracker": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ngEventTracker",
+            "outputPath": "dist/ngSleepTracker",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngEventTracker:build"
+            "browserTarget": "ngSleepTracker:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngEventTracker:build:production"
+              "browserTarget": "ngSleepTracker:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngEventTracker:build"
+            "browserTarget": "ngSleepTracker:build"
           }
         },
         "test": {
@@ -110,15 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngEventTracker:serve"
+            "devServerTarget": "ngSleepTracker:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ngEventTracker:serve:production"
+              "devServerTarget": "ngSleepTracker:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "ngEventTracker"
+  "defaultProject": "ngSleepTracker"
 }
